--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -96,8 +96,32 @@ nav::before {
 }
 
 .menu li:hover {
-  color: var(--highlight);
+  color: var(--white-default);
   cursor: pointer;
+  transition: all 0.5s ease-in-out;
+}
+
+.menu li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  position: relative;
+}
+
+.menu li:hover > .dot-menu {
+  transition: all 0.5s ease-in-out;
+  opacity: 1;
+}
+
+.dot-menu {
+  position: absolute;
+  bottom: -1rem;
+  height: 1rem;
+  width: 1rem;
+  background-color: var(--highlight);
+  border-radius: 50%;
+  opacity: 0;
 }
 
 /* Section s-hero */
