--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -206,6 +206,7 @@ nav::before {
 
 .s-hero .about-plus .social-media ul {
   display: flex;
+  flex-direction: row-reverse;
   color: var(--white-default);
 }
 
@@ -213,6 +214,21 @@ nav::before {
   display: flex;
   margin: 0 1rem;
 }
+
+.s-hero .about-plus .social-media ul li:last-child {
+  color: var(--highlight);
+  transition: all 0.3s ease-in-out;
+}
+
+.s-hero .about-plus .social-media ul li:hover {
+  cursor: pointer;
+  color: var(--highlight);
+}
+
+.s-hero .about-plus .social-media ul li:hover ~ li:last-child {
+  color: var(--white-default);
+}
+
 .s-hero .about-plus .about-me-plus {
   min-width: 46.5rem;
 }
@@ -445,6 +461,4 @@ footer p span:first-child {
 }
 
 footer p span:last-child {
-  color: #fff;
-  font-weight: bold;
-}
+  
