fix: linha footer extra

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -459,3 +459,8 @@ footer p span:first-child {
   color: #dcf64b;
   font-family: "Comfortaa";
 }
+
+footer p span:last-child {
+  color: #fff;
+  font-weight: bold;
+}
